wisecow-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: wisecow-service
spec:
  type: LoadBalancer
  ports:
    - port: 80
      targetPort: 4499
  selector:
    app: wisecow
